 - I/O viewer
 - Booting of multiboot images
 - Customization of GIF recording
 - Libretro: Cheat code support
 - Support for GLSL shaders
 - ROM information view
 - Support for VBA-style cheat codes
 - Savestates now store creation timestamps
 - Key autofire
 - Libretro: Allow blocking opposing directional input
 - OpenEmu core for OS X
Bugfixes:
 - Util: Fix PowerPC PNG read/write pixel order
 - VFS: Fix VFileReadline and remove _vfdReadline
 - GBA Memory: Fix DMA register writing behavior
 - GBA BIOS: Fix misaligned CpuSet
 - ARM7: Fix sign of unaligned LDRSH
 - GBA: Fix warnings when creating and loading savestates
 - GBA Memory: Fix DMAs triggering two cycles early
 - GBA Hardware: Fix GPIO on big endian
 - Util: Fix excessive memory allocation when decoding a PNG
 - GBA: Fix Iridion II savetype
 - Libretro: Fix aspect ratio
Misc:
 - Qt: Window size command line options are now supported
 - Qt: Increase usability of key mapper
 - GBA Memory: Use a dynamically sized mask for ROM memory
 - ARM7: Combine shifter-immediate and shifter-register functions to reduce binary size
 - SDL: Support fullscreen in SDL 1.2
 - Libretro: Use anonymous memory mappers for large blocks of memory
 - Qt: Add 'Apply' button to settings window
 - GBA Video: Remove lastHblank, as it is implied
 - GBA Config: Add "override" layer for better one-time configuration
 - SDL: Allow GBASDLAudio to be used without a thread context
 - All: Improved PowerPC support
 - All: Fix some undefined behavior warnings
 - Util: Use VFile for configuration
 - GBA Memory: Implement several unimplemented memory access types
 - GBA: Implement bad I/O register loading
 - GBA Memory: Add GBAView* functions for viewing memory directly without bus issues
 - Util: Add MutexTryLock
 - Qt: Gray out "Skip BIOS intro" while "Use BIOS file" is unchecked
 - Qt: Allow use of modifier keys as input
 - Qt: Optimize log viewer
 - GBA RR: Starting from savestate now embeds the savegame